--- a/public/index.html
+++ b/public/index.html
@@ -16,4 +16,6 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  
+  <script src="./TitilliumWeb-Regular-normal.js"></script>
 </html>
